--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ APP_URL=127.0.0.1
 APP_PORT=3000
 APP_ENV=local
 
+# Pengaturan Aplikasi dengan/tanpa Database
+APP_NO_DB=true
+
+# Pengaturan Database
 DB_USER=username
 DB_PASS=password
 DB_NAME=database
@@ -10,3 +14,6 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_CHARSET=utf8mb4
 DB_DRIVER=mysql
+
+# Pengaturan Keamanan
+SEC_CSP=true
