upgrade versi legit dan cli ke v1.2.0

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,11 @@ DB_PORT=3306
 DB_CHARSET=utf8mb4
 DB_DRIVER=mysql
 
-# Pengaturan Keamanan
+# Pengaturan REST API, jika true maka route api.go diaktifkan
+REST_API=false
+
+# Pengaturan Middleware
+# Pengaturan default ada di path config/app.go
+SEC_CACHE=true
+SEC_COMPRESS=true
 SEC_CSP=false
