bugs fixing cache&session 080624 14.09

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ REST_API=false
 
 # Pengaturan Middleware
 # Pengaturan default ada di path config/app.go
-SEC_CACHE=true
+# SEC_CACHE boleh aktifkan jika sudah ada database dan APP_NO_DB = false
+SEC_CACHE=false
 SEC_COMPRESS=true
 SEC_CSP=false
